--- a/HW/books-search-plain-js/css/main.css
+++ b/HW/books-search-plain-js/css/main.css
@@ -3,51 +3,100 @@ body, html{
     display:flex;
     height: 100%;
     flex-direction: column;
+    margin:0;
 } 
 header{
-    flex:10%;
+    flex:20%;
+    flex-shrink: 0;
+    background-color: aquamarine;
+    border-bottom-right-radius: 1rem;
 }
 
 nav {
+    flex:10%;
     display: flex;
-    overflow:hidden;
     background-color: #000;
-    padding: 20px 10px;
     flex-direction: row;
     align-items: center;
+    border-radius: 0rem 1rem 1rem 1rem;
 }
 nav a {
+    flex:20%;
     color: #fff;
     padding: 12px;
     text-decoration: none;
     font-size: 18px;
     line-height: 25px;
-    border-radius: 4px;
+    border-radius: 1rem;
   }
-
+  .logo{
+    height:100px;
+    width: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: black;
+  }
+  main{
+    flex: 65%;
+  }
   #search-wrapper{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex:10%
+  }
+   #search-wrapper div:not(#error){
+    flex: 15%;
+    margin:5px
+  }
+  /* #search-wrapper div>input{
+    flex: 80%
+  }  */
+
+  #content-wrapper{
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
   }
-  .search-box{
-    flex-grow: 40%;
-    flex-basis: 100%;
+  .book-container{
+    display: flex;
+    flex-direction: row;
+    flex:40%;
+    flex-wrap: wrap;
+    border-color: #000;
+    background-color: rgb(161, 161, 151);
+    border-radius: 1rem;
+    margin: 5px;
   }
-  .checks{
-    flex:10%
+  .book-container h3,h4{
+    flex:30%  
   }
-  .logo{
-    flex:20%;
-    background-color: burlywood;
+  .book-container p{
+    flex:40%  
   }
-  main{
-    flex: 70%
+  .book-container img{
+    align-self: flex-start;
+    border-radius: 1rem;
   }
   footer {
-    flex: 10%;
+    flex: 5%;
+    flex-shrink: 0;
+    border-radius: 1rem 1rem 0rem 0rem;
+    background-color: aquamarine;
   }
   #error{
     color:red;
     display:none;
+  }
+  @media (max-width: 900px) {
+    #search-wrapper{
+      flex-direction: column;
+    }
+    #content-wrapper{
+      flex-direction: column;
+    }
+    nav {
+      flex-direction: column;
+    }
+    
   }
