Broad search; toggle specific and broad search

--- a/HW/books-search-plain-js/css/main.css
+++ b/HW/books-search-plain-js/css/main.css
@@ -43,11 +43,20 @@ nav a {
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     flex:10%
   }
-   #search-wrapper div:not(#error){
+  #specific-search{
+    display:flex;
+    flex:100%;
+    
+  }
+  #specific-search div:not(#error){
     flex: 15%;
     margin:5px
+  }
+  #broad-search-field{
+    flex:100%
   }
   /* #search-wrapper div>input{
     flex: 80%
