--- a/HW/books-search-plain-js/css/main.css
+++ b/HW/books-search-plain-js/css/main.css
@@ -98,14 +98,18 @@ nav a {
     display:none;
   }
   @media (max-width: 900px) {
-    #search-wrapper{
+    #specific-search{
       flex-direction: column;
+      align-items: center;
     }
     #content-wrapper{
       flex-direction: column;
     }
     nav {
       flex-direction: column;
+    }
+    #broad-search-field{
+      flex:100%
     }
     
   }
