--- a/HW/books-search-plain-js/css/main.css
+++ b/HW/books-search-plain-js/css/main.css
@@ -44,7 +44,8 @@ nav a {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    flex:10%
+    flex:10%;
+    margin:5px;
   }
   #specific-search{
     display:flex;
@@ -56,7 +57,8 @@ nav a {
     margin:5px
   }
   #broad-search-field{
-    flex:100%
+    flex:100%;
+    margin:5px;
   }
   /* #search-wrapper div>input{
     flex: 80%
