Refactored everything, adding repository, interfaces, classes

--- a/HW/books-search-ts(v.0.2)/css/main.css
+++ b/HW/books-search-ts(v.0.2)/css/main.css
@@ -79,7 +79,7 @@ main {
   background-color: rgb(161, 161, 151);
   border-radius: 1rem;
   margin: 5px;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .book-container h3,
 h4 {
